HOP-3221: Deprecated code cleanup