@@ -96,7 +96,7 @@ public class JavaScriptUtils {
     } else {
       String classType = clazz.getName();
       if (classType.equalsIgnoreCase("java.lang.String")) {
-        return (new Long((String) value));
+        return (Long.valueOf((String) value));
       } else if (classType.equalsIgnoreCase("org.mozilla.javascript.Undefined")) {
         return null;
       } else if (classType.equalsIgnoreCase("org.mozilla.javascript.NativeNumber")) {
@@ -159,7 +159,7 @@ public class JavaScriptUtils {
       return null;
     } else if (classType.equalsIgnoreCase("org.mozilla.javascript.NativeNumber")) {
       Number nb = Context.toNumber(value);
-      return new BigDecimal(nb.doubleValue());
+      return BigDecimal.valueOf(nb.doubleValue());
     } else if (classType.equalsIgnoreCase("org.mozilla.javascript.NativeJavaObject")) {
       // Is it a BigDecimal class ?
       try {
@@ -169,17 +169,17 @@ public class JavaScriptUtils {
         return new BigDecimal(string);
       }
     } else if (classType.equalsIgnoreCase("java.lang.Byte")) {
-      return new BigDecimal(((Byte) value).longValue());
+      return BigDecimal.valueOf(((Byte) value).longValue());
     } else if (classType.equalsIgnoreCase("java.lang.Short")) {
-      return new BigDecimal(((Short) value).longValue());
+      return BigDecimal.valueOf(((Short) value).longValue());
     } else if (classType.equalsIgnoreCase("java.lang.Integer")) {
-      return new BigDecimal(((Integer) value).longValue());
+      return BigDecimal.valueOf(((Integer) value).longValue());
     } else if (classType.equalsIgnoreCase("java.lang.Long")) {
-      return new BigDecimal(((Long) value).longValue());
+      return BigDecimal.valueOf(((Long) value).longValue());
     } else if (classType.equalsIgnoreCase("java.lang.Double")) {
-      return new BigDecimal(((Double) value).doubleValue());
+      return BigDecimal.valueOf(((Double) value).doubleValue());
     } else if (classType.equalsIgnoreCase("java.lang.String")) {
-      return new BigDecimal((new Long((String) value)).longValue());
+      return BigDecimal.valueOf((new Long((String) value)).longValue());
     } else {
       throw new RuntimeException(
           "JavaScript conversion to BigNumber not implemented for " + classType);
