@@ -116,7 +116,7 @@ public class Constant extends BaseTransform<ConstantMeta, ConstantData>
                     data.df.setDecimalFormatSymbols(data.dfs);
                   }
 
-                  rowData[i] = new Double(data.nf.parse(stringValue).doubleValue());
+                  rowData[i] = Double.valueOf(data.nf.parse(stringValue).doubleValue());
                 } catch (Exception e) {
                   String message =
                       BaseMessages.getString(
@@ -155,7 +155,7 @@ public class Constant extends BaseTransform<ConstantMeta, ConstantData>
 
               case IValueMeta.TYPE_INTEGER:
                 try {
-                  rowData[i] = new Long(Long.parseLong(stringValue));
+                  rowData[i] = Long.valueOf(stringValue);
                 } catch (Exception e) {
                   String message =
                       BaseMessages.getString(
